--- a/wxcode/app.json
+++ b/wxcode/app.json
@@ -1,12 +1,13 @@
 {
   "pages":[
-    "pages/login/login",
     "pages/index/index",
     "pages/search/search",
     "pages/select/select",
     "pages/mine/mine",
     "pages/logs/logs",
-    "pages/detail/detail"
+    "pages/detail/detail",
+    "pages/auth/auth",
+    "pages/error/error"
     
   ],
   "window":{
