--- a/wxcode/project.config.json
+++ b/wxcode/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wx2e203dc8ee9f36b6",
-	"projectname": "%E9%AA%90%E9%AA%A5",
+	"projectname": "%E9%81%93%E5%8F%AF%E9%81%93",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
